istio/istio-ais/staging/ingress-gateway.staging.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: alert # Not neccessary to be in istio-system namespace
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - huawei.2.intra.test.io
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - alert/istio-gateway # Need to specify the namespace for the gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: httpbin
        port:
          number: 8000
